--- a/WebDemoQLDA/Views/Faculty/Details.cshtml
+++ b/WebDemoQLDA/Views/Faculty/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebDemoQLDA.Models.Faculty
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "ViewBag.facultyDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,33 +11,33 @@
     <h4>Faculty</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdFaculty)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdFaculty)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NameFaculty)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NameFaculty)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsDelete)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsDelete)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsActive)
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.IdFaculty }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.IdFaculty }) |
     <a asp-action="Index">Back to List</a>
 </div>
