--- a/WebDemoQLDA/Views/Faculty/Index.cshtml
+++ b/WebDemoQLDA/Views/Faculty/Index.cshtml
@@ -1,54 +1,76 @@
-﻿@model IEnumerable<WebDemoQLDA.Models.Faculty>
+﻿@*@model IEnumerable<WebDemoQLDA.Models.Faculty>*@
+@*@using WebDemoQLDA.Models.Faculty*@
+
+@model WebDemoQLDA.Models.Faculty
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @*<a asp-action="Create">Create New</a>*@
+    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#facultypopup">Create New</a>
 </p>
+<div class="modal fade" id="facultypopup">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header"></div>
+            <div class="modal-title">
+                <h2>Faculty New</h2>
+            </div>
+            <div class="modal-body">
+                <form id="facutlyform" asp-action="Create">
+                    <label>Name Faculty</label>
+                    @Html.TextBoxFor(m => m.NameFaculty, new { @class = "form-control" })
+                    <div class="modal-footer">
+                        <div class="btn-group">
+                            <input type="submit" value="Create" class="btn btn-primary mr-2" />
+                            <a asp-action="Index" id="btncancel" class="btn btn-danger">Cancel</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.IdFaculty)
+                IdFaculty
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.NameFaculty)
+                NameFaculty
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsDelete)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsActive)
-            </th>
+
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdFaculty)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NameFaculty)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsDelete)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsActive)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.IdFaculty }) |
-                @Html.ActionLink("Details", "Details", new {  id=item.IdFaculty }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.IdFaculty })
-            </td>
-        </tr>
-}
+        @foreach (var item in ViewBag.Faculty)
+        {
+            <tr>
+                <td>
+                    @item.IdFaculty
+                </td>
+                <td>
+                    @item.NameFaculty
+
+                </td>
+
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.IdFaculty }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.IdFaculty }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.IdFaculty })
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
