--- a/WebDemoQLDA/Views/Shared/_Layout.cshtml
+++ b/WebDemoQLDA/Views/Shared/_Layout.cshtml
@@ -35,19 +35,22 @@
             </div>
         </nav>
     </header>
-   
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-    
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - WebDemoQLDA - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
